fix: novel upload epub